// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CounterContainer test Should render aboveten 1`] = `
.c0 {
  width: 200px;
  height: 200px;
  border-radius: 50%;
  border: 1px solid white;
  background-color: rgb(72,133,218);
  text-align: center;
  padding-top: 80px;
  font-size: 30px;
  color: white;
  background-color: rgb(252,38,0);
  -webkit-transition: linear 0.9s;
  transition: linear 0.9s;
}

<div>
  <div
    class="c0"
    type="aboveten"
  >
    2038
  </div>
</div>
`;

exports[`CounterContainer test Should render abovezero 1`] = `
.c0 {
  width: 200px;
  height: 200px;
  border-radius: 50%;
  border: 1px solid white;
  background-color: rgb(72,133,218);
  text-align: center;
  padding-top: 80px;
  font-size: 30px;
  color: white;
  background-color: rgb(215,104,84);
  -webkit-transition: linear 0.9s;
  transition: linear 0.9s;
}

<div>
  <div
    class="c0"
    type="abovezero"
  >
    4
  </div>
</div>
`;

exports[`CounterContainer test Should render lessten 1`] = `
.c0 {
  width: 200px;
  height: 200px;
  border-radius: 50%;
  border: 1px solid white;
  background-color: rgb(72,133,218);
  text-align: center;
  padding-top: 80px;
  font-size: 30px;
  color: white;
  background-color: rgb(0,69,166);
  -webkit-transition: linear 0.9s;
  transition: linear 0.9s;
}

<div>
  <div
    class="c0"
    type="lessten"
  >
    -10
  </div>
</div>
`;

exports[`CounterContainer test Should render lesszero 1`] = `
.c0 {
  width: 200px;
  height: 200px;
  border-radius: 50%;
  border: 1px solid white;
  background-color: rgb(72,133,218);
  text-align: center;
  padding-top: 80px;
  font-size: 30px;
  color: white;
  background-color: rgb(98,138,196);
  -webkit-transition: linear 0.9s;
  transition: linear 0.9s;
}

<div>
  <div
    class="c0"
    type="lesszero"
  >
    -5
  </div>
</div>
`;

exports[`CounterContainer test Should render zero 1`] = `
.c0 {
  width: 200px;
  height: 200px;
  border-radius: 50%;
  border: 1px solid white;
  background-color: rgb(72,133,218);
  text-align: center;
  padding-top: 80px;
  font-size: 30px;
  color: white;
  background-color: #696867;
  -webkit-transition: linear 0.9s;
  transition: linear 0.9s;
}

<div>
  <div
    class="c0"
    type="zero"
  >
    0
  </div>
</div>
`;
